ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress-1viewtask-qa
  namespace: qa-viewtask
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
    - host: qa.1viewtask.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-svc-qa
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress-qa
  namespace: qa-viewtask
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: qa.1viewtask.com
      http:
        paths:
          - pathType: Prefix
            path: "/complianceapi(/|$)(.*)"
            backend:
              service: 
                name: api-svc-qa
                port:
                  number: 80
          - pathType: Prefix
            path: "/authapi(/|$)(.*)"
            backend:
              service:
                name: auth-api-svc-qa
                port:
                  number: 80
